other-mpol/add-tolerations/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: add-tolerations
