other-mpol/add-tolerations/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: add-tolerations
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ns.yaml
    - apply:
        file: ../add-tolerations.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: kuttlresource.yaml
    - assert:
        file: resource-mutated.yaml
  - name: step-03-exception
    try:
    - apply:
        file: policy-exceptions-namespace.yaml
    - apply:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: PolicyException
          metadata:
            name: tolerations-exception
            namespace: policy-exceptions
          spec:
            policyRefs:
            - name: add-tolerations
              kind: MutatingPolicy
            matchConditions:
            - name: exact-pod
              expression: object.metadata.namespace == 'add-tolerations' && object.metadata.name == 'tolerations-exception'
    - sleep: {duration: 15s}
    - apply:
        resource:
          apiVersion: v1
          kind: Pod
          metadata:
            name: tolerations-exception
            namespace: add-tolerations
          spec:
            containers:
            - name: app
              image: nginx:latest
            tolerations:
            - key: org.com/test
              operator: Exists
              effect: NoSchedule
    - apply:
        resource:
          apiVersion: v1
          kind: Pod
          metadata:
            name: tolerations-sibling
            namespace: add-tolerations
          spec:
            containers:
            - name: app
              image: nginx:latest
    - assert:
        resource:
          apiVersion: v1
          kind: Pod
          metadata:
            name: tolerations-exception
            namespace: add-tolerations
          spec:
            (tolerations[?key == 'org.com/test' && operator == 'Exists' && effect == 'NoSchedule'] | length(@) == `1`): true
            (tolerations[?key == 'org.com/role'] | length(@) == `0`): true
    - error:
        resource:
          apiVersion: v1
          kind: Pod
          metadata:
            name: tolerations-exception
            namespace: add-tolerations
          spec:
            (tolerations[?key == 'org.com/role'] | length(@) == `1`): true
    - assert:
        resource:
          apiVersion: v1
          kind: Pod
          metadata:
            name: tolerations-sibling
            namespace: add-tolerations
          spec:
            (tolerations[?key == 'org.com/role' && operator == 'Equal' && value == 'service' && effect == 'NoSchedule'] | length(@) == `1`): true
